aligning work portfolio

--- a/work.html
+++ b/work.html
@@ -25,6 +25,7 @@
     <![endif]-->
 
     <!-- Custom styles for this template -->
+    <link href="css/style.css" rel="stylesheet">
     <!--<link href="carousel.css" rel="stylesheet">-->
 </head>
 <!-- NAVBAR
@@ -74,43 +75,43 @@
     <div class="tab-content">
         <div role="tabpanel" class="tab-pane active" id="home">
 
-            <div class="col-xs-6 col-sm-3">
-                <div class="thumbnail"><img src="image/websites/JesusChristSuperstar.png" alt="JesusChristSuperstar">
-                    <div class="caption"><h3>Jesus Christ Superstar</h3>
-                        <p>This website was built to demonstrate design in building a ticket booking website, to form
-                            has many parts and is built with jQuery.</p>
-                        <p>
-                            <a href="http://www.bexbase.com/leighgardencentre/" target="_blank" class="btn btn-primary"
-                               role="button">Visit Website</a>
-                        </p>
-                    </div>
-                </div>
-            </div>
+            <!--<div class="col-xs-6 col-sm-3">-->
+                <!--<div class="thumbnail"><img src="image/websites/JesusChristSuperstar.png" alt="JesusChristSuperstar">-->
+                    <!--<div class="caption"><h3>Jesus Christ Superstar</h3>-->
+                        <!--<p>This website was built to demonstrate design in building a ticket booking website, to form-->
+                            <!--has many parts and is built with jQuery.</p>-->
+                        <!--<p>-->
+                            <!--<a href="http://www.bexbase.com/leighgardencentre/" target="_blank" class="btn btn-primary"-->
+                               <!--role="button">Visit Website</a>-->
+                        <!--</p>-->
+                    <!--</div>-->
+                <!--</div>-->
+            <!--</div>-->
 
-            <div class="col-xs-6 col-sm-3">
-                <div class="thumbnail"><img src="image/websites/LeighGardenCentre.png" alt="LeighGardenCentre">
-                    <div class="caption"><h3>Leigh Garden Centre</h3>
-                        <p>This website was built for a free lance client in 2012, unfortunately the sale never happen
-                            and the client sold the business. </p>
-                        <p>
-                            <a href="http://bexbase.com/benswork/" target="_blank" class="btn btn-primary"
-                               role="button">Visit Website</a>
-                        </p>
-                    </div>
-                </div>
-            </div>
+            <!--<div class="col-xs-6 col-sm-3">-->
+                <!--<div class="thumbnail"><img src="image/websites/LeighGardenCentre.png" alt="LeighGardenCentre">-->
+                    <!--<div class="caption"><h3>Leigh Garden Centre</h3>-->
+                        <!--<p>This website was built for a free lance client in 2012, unfortunately the sale never happen-->
+                            <!--and the client sold the business. </p>-->
+                        <!--<p>-->
+                            <!--<a href="http://bexbase.com/benswork/" target="_blank" class="btn btn-primary"-->
+                               <!--role="button">Visit Website</a>-->
+                        <!--</p>-->
+                    <!--</div>-->
+                <!--</div>-->
+            <!--</div>-->
 
-            <div class="col-xs-6 col-sm-3">
-                <div class="thumbnail"><img src="image/websites/TwitterQuery.png" alt="TwitterQuery">
-                    <div class="caption"><h3>Twitter Query</h3>
-                        <p>This website was built as a project to query all tweets under a string term.</p>
-                        <p>
-                            <a href="http://bexbase.com//test2/" target="_blank" class="btn btn-primary" role="button">Visit
-                                Website</a>
-                        </p>
-                    </div>
-                </div>
-            </div>
+            <!--<div class="col-xs-6 col-sm-3">-->
+                <!--<div class="thumbnail"><img src="image/websites/TwitterQuery.png" alt="TwitterQuery">-->
+                    <!--<div class="caption"><h3>Twitter Query</h3>-->
+                        <!--<p>This website was built as a project to query all tweets under a string term.</p>-->
+                        <!--<p>-->
+                            <!--<a href="http://bexbase.com//test2/" target="_blank" class="btn btn-primary" role="button">Visit-->
+                                <!--Website</a>-->
+                        <!--</p>-->
+                    <!--</div>-->
+                <!--</div>-->
+            <!--</div>-->
 
             <div class="col-xs-6 col-sm-3">
                 <div class="thumbnail"><img src="image/websites/PopOutImage.png" alt="PopOutImage">
@@ -124,41 +125,81 @@
                 </div>
             </div>
 
-            <div class="col-xs-6 col-sm-3">
-                <div class="thumbnail"><img src="image/websites/bmWood.png" alt="PopOutImage">
-                    <div class="caption"><h3>BM Wood</h3>
-                        <p>This is a client website built in 3 different languages, the system also allows client to upload photos.</p>
-                        <p>
-                            <a href="http://www.bmwood.co.uk/" target="_blank" class="btn btn-primary" role="button">Visit
-                                Website</a>
-                        </p>
-                    </div>
-                </div>
-            </div>
 
-            <div class="col-xs-6 col-sm-3">
-                <div class="thumbnail"><img src="image/websites/SavingsSystem.png" alt="PopOutImage">
-                    <div class="caption"><h3>Regular Savings Tracker</h3>
-                        <p>This is a system I have built to track all your regular savings across all account.</p>
-                        <p>
-                            <a href="http://benoats.co/university/savings/" target="_blank" class="btn btn-primary" role="button">Visit
-                                Website</a>
-                        </p>
-                    </div>
-                </div>
-            </div>
 
-            <div class="col-xs-6 col-sm-3">
-                <div class="thumbnail"><img src="image/websites/BexBase.png" alt="PopOutImage">
-                    <div class="caption"><h3>BexBase Development</h3>
-                        <p>This is a website that was built as a marketing website for freelance work in 2011.</p>
+
+
+
+            <div class="row">
+
+                <div class="col-lg-12">
+                    <h1 class="page-header">Personal Projects</h1>
+                    <p>This is a full list of all my projects past and present, some of my best, worst and ongoing projects.</p>
+                    <p>all code for these projects i have made 100% open source and is kept on my GIT Hub account LINK TO ACCOUNT, I also try and document my work on my blog here LINK HERE.</p>
+                </div>
+
+                <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                    <a class="thumbnail" href="http://bexbase.com/index.php">
+                        <img class="img-responsive work_image" src="image/websites/BexBase.png" alt="PopOutImage">
+                    </a>
+                    <div class="caption"><h3 class="work_text_h3">BexBase Development</h3>
+                        <p class="work_text">This is a website that was built as a marketing website for freelance work in 2011.</p>
                         <p>
                             <a href="http://bexbase.com/index.php" target="_blank" class="btn btn-primary" role="button">Visit
                                 Website</a>
+                            <!--<a href="" target="_blank" class="btn btn-success" role="button">No Code</a>-->
                         </p>
                     </div>
                 </div>
+
+                <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                    <a class="thumbnail" href="http://benoats.co/university/savings/">
+                        <img class="img-responsive work_image" src="image/websites/SavingsSystem.png" alt="PopOutImage">
+                    </a>
+                    <div class="caption"><h3 class="work_text_h3">Regular Savings Tracker</h3>
+                        <p class="work_text">This is a system I have built to track all your regular savings across all account.</p>
+                        <p>
+                            <a href="http://benoats.co/university/savings/" target="_blank" class="btn btn-primary" role="button">Visit
+                                Website</a>
+                            <a href="https://github.com/TheLaughingGod1986/savings" target="_blank" class="btn btn-success" role="button">View Code</a>
+                        </p>
+                    </div>
+                </div>
+
+                <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                    <a class="thumbnail" href="http://www.bmwood.co.uk/">
+                        <img class="img-responsive work_image" src="image/websites/bmWood.png" alt="BmWood">
+                    </a>
+                    <div class="caption"><h3 class="work_text_h3">BM Wood</h3>
+                        <p class="work_text">This is a client website built in 3 different languages, the system also allows client to upload photos.</p><p>
+                        <p>
+                            <a href="http://www.bmwood.co.uk/" target="_blank" class="btn btn-primary" role="button">Visit
+                                Website</a>
+                            <!--<a href="https://github.com/TheLaughingGod1986/savings" target="_blank" class="btn btn-success" role="button">View Code</a>-->
+                        </p>
+                    </div>
+                </div>
+
+                <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                    <a class="thumbnail" href="http://bexbase.com//test/">
+                        <img class="img-responsive work_image" src="image/websites/PopOutImage.png" alt="PopOutImage">
+                    </a>
+                    <div class="caption"><h3 class="work_text_h3">Pop Out Image Gallery</h3>
+                        <p class="work_text">This is built using jQuery as part of a gallery I was building for a client.</p>
+                        <p>
+                            <a href="http://bexbase.com//test/" target="_blank" class="btn btn-primary" role="button">Visit
+                                Website</a>
+                            <!--<a href="https://github.com/TheLaughingGod1986/savings" target="_blank" class="btn btn-success" role="button">View Code</a>-->
+                        </p>
+                    </div>
+                </div>
+
+              
+
+
+
             </div>
+
 
         </div>
 
