--- a/work.html
+++ b/work.html
@@ -75,56 +75,18 @@
     <div class="tab-content">
         <div role="tabpanel" class="tab-pane active" id="home">
 
-            <!--<div class="col-xs-6 col-sm-3">-->
-                <!--<div class="thumbnail"><img src="image/websites/JesusChristSuperstar.png" alt="JesusChristSuperstar">-->
-                    <!--<div class="caption"><h3>Jesus Christ Superstar</h3>-->
-                        <!--<p>This website was built to demonstrate design in building a ticket booking website, to form-->
-                            <!--has many parts and is built with jQuery.</p>-->
-                        <!--<p>-->
-                            <!--<a href="http://www.bexbase.com/leighgardencentre/" target="_blank" class="btn btn-primary"-->
-                               <!--role="button">Visit Website</a>-->
-                        <!--</p>-->
-                    <!--</div>-->
-                <!--</div>-->
-            <!--</div>-->
-
-            <!--<div class="col-xs-6 col-sm-3">-->
-                <!--<div class="thumbnail"><img src="image/websites/LeighGardenCentre.png" alt="LeighGardenCentre">-->
-                    <!--<div class="caption"><h3>Leigh Garden Centre</h3>-->
-                        <!--<p>This website was built for a free lance client in 2012, unfortunately the sale never happen-->
-                            <!--and the client sold the business. </p>-->
-                        <!--<p>-->
-                            <!--<a href="http://bexbase.com/benswork/" target="_blank" class="btn btn-primary"-->
-                               <!--role="button">Visit Website</a>-->
-                        <!--</p>-->
-                    <!--</div>-->
-                <!--</div>-->
-            <!--</div>-->
-
-            <!--<div class="col-xs-6 col-sm-3">-->
-                <!--<div class="thumbnail"><img src="image/websites/TwitterQuery.png" alt="TwitterQuery">-->
-                    <!--<div class="caption"><h3>Twitter Query</h3>-->
-                        <!--<p>This website was built as a project to query all tweets under a string term.</p>-->
-                        <!--<p>-->
-                            <!--<a href="http://bexbase.com//test2/" target="_blank" class="btn btn-primary" role="button">Visit-->
-                                <!--Website</a>-->
-                        <!--</p>-->
-                    <!--</div>-->
-                <!--</div>-->
-            <!--</div>-->
-
             <div class="col-xs-6 col-sm-3">
-                <div class="thumbnail"><img src="image/websites/PopOutImage.png" alt="PopOutImage">
-                    <div class="caption"><h3>Pop Out Image Gallery</h3>
-                        <p>This is built using jQuery as part of a gallery i was building for a client.</p>
+                <div class="thumbnail"><img src="image/websites/JesusChristSuperstar.png" alt="JesusChristSuperstar">
+                    <div class="caption"><h3>Jesus Christ Superstar</h3>
+                        <p>This website was built to demonstrate design in building a ticket booking website, to form
+                            has many parts and is built with jQuery.</p>
                         <p>
-                            <a href="http://bexbase.com//test/" target="_blank" class="btn btn-primary" role="button">Visit
-                                Website</a>
+                            <a href="http://www.bexbase.com/leighgardencentre/" target="_blank" class="btn btn-primary"
+                               role="button">Visit Website</a>
                         </p>
                     </div>
                 </div>
             </div>
-
 
 
 
@@ -138,7 +100,7 @@
                     <p>all code for these projects i have made 100% open source and is kept on my GIT Hub account LINK TO ACCOUNT, I also try and document my work on my blog here LINK HERE.</p>
                 </div>
 
-                <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                <div class="col-lg-3 col-md-4 col-xs-6 work_container thumb">
                     <a class="thumbnail" href="http://bexbase.com/index.php">
                         <img class="img-responsive work_image" src="image/websites/BexBase.png" alt="PopOutImage">
                     </a>
@@ -152,7 +114,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                <div class="col-lg-3 col-md-4 col-xs-6 work_container thumb">
                     <a class="thumbnail" href="http://benoats.co/university/savings/">
                         <img class="img-responsive work_image" src="image/websites/SavingsSystem.png" alt="PopOutImage">
                     </a>
@@ -166,7 +128,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                <div class="col-lg-3 col-md-4 col-xs-6 work_container thumb">
                     <a class="thumbnail" href="http://www.bmwood.co.uk/">
                         <img class="img-responsive work_image" src="image/websites/bmWood.png" alt="BmWood">
                     </a>
@@ -174,6 +136,49 @@
                         <p class="work_text">This is a client website built in 3 different languages, the system also allows client to upload photos.</p><p>
                         <p>
                             <a href="http://www.bmwood.co.uk/" target="_blank" class="btn btn-primary" role="button">Visit
+                                Website</a>
+                            <!--<a href="https://github.com/TheLaughingGod1986/savings" target="_blank" class="btn btn-success" role="button">View Code</a>-->
+                        </p>
+                    </div>
+                </div>
+
+                <div class="col-lg-3 col-md-4 col-xs-6 work_container thumb">
+                    <a class="thumbnail" href="http://bexbase.com//test/">
+                        <img class="img-responsive work_image" src="image/websites/PopOutImage.png" alt="PopOutImage">
+                    </a>
+                    <div class="caption"><h3 class="work_text_h3">Pop Out Image Gallery</h3>
+                        <p class="work_text">This is built using jQuery as part of a gallery I was building for a client.</p>
+                        <p>
+                            <a href="http://bexbase.com//test/" target="_blank" class="btn btn-primary" role="button">Visit
+                                Website</a>
+                            <!--<a href="https://github.com/TheLaughingGod1986/savings" target="_blank" class="btn btn-success" role="button">View Code</a>-->
+                        </p>
+                    </div>
+                </div>
+
+                <div class="col-lg-3 col-md-4 col-xs-6 work_container thumb">
+                    <a class="thumbnail" href="http://bexbase.com//test2/">
+                        <img class="img-responsive work_image" src="image/websites/TwitterQuery.png" alt="TwitterQuery">
+                    </a>
+                    <div class="caption"><h3 class="work_text_h3">Twitter Query</h3>
+                        <p class="work_text">This website was built as a project to query all tweets under a string term.</p>
+                       <p>
+                            <a href="http://bexbase.com//test2/" target="_blank" class="btn btn-primary" role="button">Visit
+                                Website</a>
+                            <!--<a href="https://github.com/TheLaughingGod1986/savings" target="_blank" class="btn btn-success" role="button">View Code</a>-->
+                        </p>
+                    </div>
+                </div>
+
+                <div class="col-lg-3 col-md-4 col-xs-6 work_container thumb">
+                    <a class="thumbnail" href="http://bexbase.com/benswork/">
+                        <img class="img-responsive work_image" src="image/websites/LeighGardenCentre.png" alt="LeighGaredenCentre">
+                    </a>
+                    <div class="caption"><h3 class="work_text_h3">Leigh Garden Centre</h3>
+                        <p class="work_text">This website was built for a free lance client in 2012, unfortunately the sale never happen
+                            and the client sold the business.</p>
+                        <p>
+                            <a href="http://bexbase.com/benswork/" target="_blank" class="btn btn-primary" role="button">Visit
                                 Website</a>
                             <!--<a href="https://github.com/TheLaughingGod1986/savings" target="_blank" class="btn btn-success" role="button">View Code</a>-->
                         </p>
@@ -194,13 +199,21 @@
                     </div>
                 </div>
 
-              
-
-
+                <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                    <a class="thumbnail" href="http://bexbase.com//test/">
+                        <img class="img-responsive work_image" src="image/websites/JesusChristSuperstar.png" alt="JesusChristSuperstar">
+                    </a>
+                    <div class="caption"><h3 class="work_text_h3">Pop Out Image Gallery</h3>
+                        <p class="work_text">This is built using jQuery as part of a gallery I was building for a client.</p>
+                        <p>
+                            <a href="http://bexbase.com//test/" target="_blank" class="btn btn-primary" role="button">Visit
+                                Website</a>
+                            <!--<a href="https://github.com/TheLaughingGod1986/savings" target="_blank" class="btn btn-success" role="button">View Code</a>-->
+                        </p>
+                    </div>
+                </div>
 
             </div>
-
-
         </div>
 
         <div role="tabpanel" class="tab-pane" id="profile">coming soon....</div>
