--- a/work.html
+++ b/work.html
@@ -26,6 +26,8 @@
 
     <!-- Custom styles for this template -->
     <link href="css/style.css" rel="stylesheet">
+    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/animate.min.css" rel="stylesheet">
     <!--<link href="carousel.css" rel="stylesheet">-->
 </head>
 <!-- NAVBAR
@@ -53,65 +55,37 @@
                         <li><a href="blog">Blog</a></li>
                         <li><a href="work.html">Work</a></li>
                     </ul>
-                    </li>
-                    </ul>
                 </div>
             </div>
         </nav>
-        
     </div>
 </div>
 
 <div class="container marketing">
 
+
     <!-- Nav tabs -->
     <ul class="nav nav-tabs" role="tablist">
-        <li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">Personal Projects</a></li>
-        <li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">Commercial Products</a></li>
-        <li role="presentation"><a href="#messages" aria-controls="messages" role="tab" data-toggle="tab">Sites I Have Worked On</a></li>
+        <li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">Personal
+            Projects</a></li>
+        <li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">Commercial
+            Products</a></li>
+        <li role="presentation"><a href="#messages" aria-controls="messages" role="tab" data-toggle="tab">Sites I Have
+            Worked On</a></li>
     </ul>
 
     <!-- Tab panes -->
     <div class="tab-content">
         <div role="tabpanel" class="tab-pane active" id="home">
 
-            <div class="col-xs-6 col-sm-3">
-                <div class="thumbnail"><img src="image/websites/JesusChristSuperstar.png" alt="JesusChristSuperstar">
-                    <div class="caption"><h3>Jesus Christ Superstar</h3>
-                        <p>This website was built to demonstrate design in building a ticket booking website, to form
-                            has many parts and is built with jQuery.</p>
-                        <p>
-                            <a href="http://www.bexbase.com/leighgardencentre/" target="_blank" class="btn btn-primary"
-                               role="button">Visit Website</a>
-                        </p>
-                    </div>
-                </div>
-            </div>
-
-
-
-
-
             <div class="row">
 
                 <div class="col-lg-12">
                     <h1 class="page-header">Personal Projects</h1>
-                    <p>This is a full list of all my projects past and present, some of my best, worst and ongoing projects.</p>
-                    <p>all code for these projects i have made 100% open source and is kept on my GIT Hub account LINK TO ACCOUNT, I also try and document my work on my blog here LINK HERE.</p>
-                </div>
-
-                <div class="col-lg-3 col-md-4 col-xs-6 work_container thumb">
-                    <a class="thumbnail" href="http://bexbase.com/index.php">
-                        <img class="img-responsive work_image" src="image/websites/BexBase.png" alt="PopOutImage">
-                    </a>
-                    <div class="caption"><h3 class="work_text_h3">BexBase Development</h3>
-                        <p class="work_text">This is a website that was built as a marketing website for freelance work in 2011.</p>
-                        <p>
-                            <a href="http://bexbase.com/index.php" target="_blank" class="btn btn-primary" role="button">Visit
-                                Website</a>
-                            <!--<a href="" target="_blank" class="btn btn-success" role="button">No Code</a>-->
-                        </p>
-                    </div>
+                    <p>This is a full list of all my projects past and present, some of my best and ongoing
+                        projects.</p>
+                    <p>Some code for these projects is kept on my <a href="https://github.com/TheLaughingGod1986" target="_blank">GIT Hub account</a>.</p>
+                        <p>I also try and document my work and update research I am performing on my <a href="blog" target="_blank">Blog</a>.</p>
                 </div>
 
                 <div class="col-lg-3 col-md-4 col-xs-6 work_container thumb">
@@ -119,39 +93,14 @@
                         <img class="img-responsive work_image" src="image/websites/SavingsSystem.png" alt="PopOutImage">
                     </a>
                     <div class="caption"><h3 class="work_text_h3">Regular Savings Tracker</h3>
-                        <p class="work_text">This is a system I have built to track all your regular savings across all account.</p>
+                        <p class="work_text">This is a system I have built to track all your regular savings across all
+                            account.</p>
                         <p>
-                            <a href="http://benoats.co/university/savings/" target="_blank" class="btn btn-primary" role="button">Visit
+                            <a href="http://benoats.co/university/savings/" target="_blank" class="btn btn-primary"
+                               role="button">Visit
                                 Website</a>
-                            <a href="https://github.com/TheLaughingGod1986/savings" target="_blank" class="btn btn-success" role="button">View Code</a>
-                        </p>
-                    </div>
-                </div>
-
-                <div class="col-lg-3 col-md-4 col-xs-6 work_container thumb">
-                    <a class="thumbnail" href="http://www.bmwood.co.uk/">
-                        <img class="img-responsive work_image" src="image/websites/bmWood.png" alt="BmWood">
-                    </a>
-                    <div class="caption"><h3 class="work_text_h3">BM Wood</h3>
-                        <p class="work_text">This is a client website built in 3 different languages, the system also allows client to upload photos.</p><p>
-                        <p>
-                            <a href="http://www.bmwood.co.uk/" target="_blank" class="btn btn-primary" role="button">Visit
-                                Website</a>
-                            <!--<a href="https://github.com/TheLaughingGod1986/savings" target="_blank" class="btn btn-success" role="button">View Code</a>-->
-                        </p>
-                    </div>
-                </div>
-
-                <div class="col-lg-3 col-md-4 col-xs-6 work_container thumb">
-                    <a class="thumbnail" href="http://bexbase.com//test/">
-                        <img class="img-responsive work_image" src="image/websites/PopOutImage.png" alt="PopOutImage">
-                    </a>
-                    <div class="caption"><h3 class="work_text_h3">Pop Out Image Gallery</h3>
-                        <p class="work_text">This is built using jQuery as part of a gallery I was building for a client.</p>
-                        <p>
-                            <a href="http://bexbase.com//test/" target="_blank" class="btn btn-primary" role="button">Visit
-                                Website</a>
-                            <!--<a href="https://github.com/TheLaughingGod1986/savings" target="_blank" class="btn btn-success" role="button">View Code</a>-->
+                            <a href="https://github.com/TheLaughingGod1986/savings" target="_blank"
+                               class="btn btn-success" role="button">View Code</a>
                         </p>
                     </div>
                 </div>
@@ -161,8 +110,9 @@
                         <img class="img-responsive work_image" src="image/websites/TwitterQuery.png" alt="TwitterQuery">
                     </a>
                     <div class="caption"><h3 class="work_text_h3">Twitter Query</h3>
-                        <p class="work_text">This website was built as a project to query all tweets under a string term.</p>
-                       <p>
+                        <p class="work_text">This website was built as a project to query all tweets under a string
+                            term.</p>
+                        <p>
                             <a href="http://bexbase.com//test2/" target="_blank" class="btn btn-primary" role="button">Visit
                                 Website</a>
                             <!--<a href="https://github.com/TheLaughingGod1986/savings" target="_blank" class="btn btn-success" role="button">View Code</a>-->
@@ -170,27 +120,14 @@
                     </div>
                 </div>
 
-                <div class="col-lg-3 col-md-4 col-xs-6 work_container thumb">
-                    <a class="thumbnail" href="http://bexbase.com/benswork/">
-                        <img class="img-responsive work_image" src="image/websites/LeighGardenCentre.png" alt="LeighGaredenCentre">
-                    </a>
-                    <div class="caption"><h3 class="work_text_h3">Leigh Garden Centre</h3>
-                        <p class="work_text">This website was built for a free lance client in 2012, unfortunately the sale never happen
-                            and the client sold the business.</p>
-                        <p>
-                            <a href="http://bexbase.com/benswork/" target="_blank" class="btn btn-primary" role="button">Visit
-                                Website</a>
-                            <!--<a href="https://github.com/TheLaughingGod1986/savings" target="_blank" class="btn btn-success" role="button">View Code</a>-->
-                        </p>
-                    </div>
-                </div>
 
-                <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                <div class="col-lg-3 col-md-4 col-xs-6 work_container thumb">
                     <a class="thumbnail" href="http://bexbase.com//test/">
                         <img class="img-responsive work_image" src="image/websites/PopOutImage.png" alt="PopOutImage">
                     </a>
                     <div class="caption"><h3 class="work_text_h3">Pop Out Image Gallery</h3>
-                        <p class="work_text">This is built using jQuery as part of a gallery I was building for a client.</p>
+                        <p class="work_text">This is built using jQuery as part of a gallery I was building for a
+                            client.</p>
                         <p>
                             <a href="http://bexbase.com//test/" target="_blank" class="btn btn-primary" role="button">Visit
                                 Website</a>
@@ -199,12 +136,15 @@
                     </div>
                 </div>
 
-                <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                <div class="col-lg-3 col-md-4 col-xs-6 work_container thumb">
                     <a class="thumbnail" href="http://bexbase.com//test/">
-                        <img class="img-responsive work_image" src="image/websites/JesusChristSuperstar.png" alt="JesusChristSuperstar">
+                        <img class="img-responsive work_image" src="image/websites/JesusChristSuperstar.png"
+                             alt="JesusChristSuperstar">
                     </a>
-                    <div class="caption"><h3 class="work_text_h3">Pop Out Image Gallery</h3>
-                        <p class="work_text">This is built using jQuery as part of a gallery I was building for a client.</p>
+                    <div class="caption"><h3 class="work_text_h3">Jesus Christ Superstar</h3>
+                        <p class="work_text">This website was built to demonstrate design in building a ticket booking
+                            website, to form
+                            has many parts and is built with jQuery and wordpress.</p>
                         <p>
                             <a href="http://bexbase.com//test/" target="_blank" class="btn btn-primary" role="button">Visit
                                 Website</a>
@@ -216,7 +156,76 @@
             </div>
         </div>
 
-        <div role="tabpanel" class="tab-pane" id="profile">coming soon....</div>
+        <div role="tabpanel" class="tab-pane" id="profile">
+
+            <div role="tabpanel" class="tab-pane active" id="home">
+
+                <div class="row">
+
+                    <div class="col-lg-12">
+                        <h1 class="page-header">Commercial Products</h1>
+                        <p>This is a ......................</p>
+                        <p>all code ...................</p>
+                    </div>
+
+                    <div class="col-lg-3 col-md-4 col-xs-6 work_container thumb">
+                        <a class="thumbnail" href="http://bexbase.com/index.php">
+                            <img class="img-responsive work_image" src="image/websites/BexBase.png" alt="PopOutImage">
+                        </a>
+                        <div class="caption"><h3 class="work_text_h3">BexBase Development</h3>
+                            <p class="work_text">This is a website that was built as a marketing website for freelance
+                                work
+                                in 2011.</p>
+                            <p>
+                                <a href="http://bexbase.com/index.php" target="_blank" class="btn btn-primary"
+                                   role="button">Visit
+                                    Website</a>
+                                <!--<a href="" target="_blank" class="btn btn-success" role="button">No Code</a>-->
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-3 col-md-4 col-xs-6 work_container thumb">
+                        <a class="thumbnail" href="http://www.bmwood.co.uk/">
+                            <img class="img-responsive work_image" src="image/websites/bmWood.png" alt="BmWood">
+                        </a>
+                        <div class="caption"><h3 class="work_text_h3">BM Wood</h3>
+                            <p class="work_text">This is a client website built in 3 different languages, the system
+                                also
+                                allows client to upload photos.</p>
+                            <p>
+                            <p>
+                                <a href="http://www.bmwood.co.uk/" target="_blank" class="btn btn-primary"
+                                   role="button">Visit
+                                    Website</a>
+                                <!--<a href="https://github.com/TheLaughingGod1986/savings" target="_blank" class="btn btn-success" role="button">View Code</a>-->
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-3 col-md-4 col-xs-6 work_container thumb">
+                        <a class="thumbnail" href="http://bexbase.com/benswork/">
+                            <img class="img-responsive work_image" src="image/websites/LeighGardenCentre.png"
+                                 alt="LeighGaredenCentre">
+                        </a>
+                        <div class="caption"><h3 class="work_text_h3">Leigh Garden Centre</h3>
+                            <p class="work_text">This website was built for a free lance client in 2012, unfortunately
+                                the
+                                sale never happen
+                                and the client sold the business.</p>
+                            <p>
+                                <a href="http://bexbase.com/benswork/" target="_blank" class="btn btn-primary"
+                                   role="button">Visit
+                                    Website</a>
+                                <!--<a href="https://github.com/TheLaughingGod1986/savings" target="_blank" class="btn btn-success" role="button">View Code</a>-->
+                            </p>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
         <div role="tabpanel" class="tab-pane" id="messages">coming soon....</div>
 
     </div>
@@ -249,7 +258,7 @@
         <p class="pull-right">
             <a href="#">Back to top</a></p>
         <p>&copy; Benjamin Graham Oats, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
-        </footer>
+
 
     </div><!-- /.container -->
 
@@ -258,6 +267,9 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="js/main.js"></script>
     <script>window.jQuery || document.write('<script src="js/vendor/jquery.min.js"><\/script>')</script>
     <script src="js/bootstrap.min.js"></script>
     <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
