--- a/slider.html
+++ b/slider.html
@@ -1,3 +1,38 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="favicon.ico">
+
+    <title>Ben Oats Portfolio</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <link href="css/ie10-viewport-bug-workaround.css" rel="stylesheet">
+
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
+    <!-- Custom styles for this template -->
+    <link href="css/slider.css" rel="stylesheet">
+    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/animate.min.css" rel="stylesheet">
+    <!--<link href="carousel.css" rel="stylesheet">-->
+</head>
+<body>
+
+
 <div class="container main-container">
 
     <h1>Bootstrap Carousel with Animate.css</h1>
@@ -13,15 +48,14 @@
         <div class="carousel-inner" role="listbox">
 
             <!-- First slide -->
-            <div class="item active deepskyblue">
-
+            <div class="item active deepskyblue ">
                 <div class="carousel-caption">
                     <h3 data-animation="animated bounceInLeft">
                         This is the caption for slide 1
                     </h3>
-                    <h3 data-animation="animated bounceInRight">
+                    <p data-animation="animated bounceInRight">
                         This is the caption for slide 1
-                    </h3>
+                    </p>
                     <button class="btn btn-primary btn-lg" data-animation="animated zoomInUp">Button</button>
                 </div>
             </div> <!-- /.item -->
@@ -67,4 +101,25 @@
 
 </div><!-- /.container -->
 
-<p class="p">Demo by Antonietta Perna. <a href="http://www.sitepoint.com/bootstrap-carousel-with-css3-animations" target="_blank">See article</a>.</p>
+<!-- FOOTER -->
+<div>
+    <p class="pull-right">
+        <a href="#">Back to top</a></p>
+    <p>&copy; Benjamin Graham Oats, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+    </footer>
+
+</div><!-- /.container -->
+
+
+<!-- Bootstrap core JavaScript
+================================================== -->
+<!-- Placed at the end of the document so the pages load faster -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script>window.jQuery || document.write('<script src="js/vendor/jquery.min.js"><\/script>')</script>
+<script src="js/bootstrap.min.js"></script>
+<script src="js/main.js"></script>
+<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+<script src="js/ie10-viewport-bug-workaround.js"></script>
+</body>
+</html>
+
