--- a/work.html
+++ b/work.html
@@ -26,6 +26,7 @@
 
     <!-- Custom styles for this template -->
     <link href="css/style.css" rel="stylesheet">
+    <link href="css/slider.css" rel="stylesheet">
     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/animate.min.css" rel="stylesheet">
     <!--<link href="carousel.css" rel="stylesheet">-->
@@ -88,7 +89,7 @@
                         <p>I also try and document my work and update research I am performing on my <a href="blog" target="_blank">Blog</a>.</p>
                 </div>
 
-                <div class="col-lg-3 col-md-4 col-xs-6 work_container thumb">
+                <div class="col-lg-3 col-md-4 col-xs-6 work_container thumb bw">
                     <a class="thumbnail" href="http://benoats.co/university/savings/">
                         <img class="img-responsive work_image" src="image/websites/SavingsSystem.png" alt="PopOutImage">
                     </a>
@@ -105,8 +106,8 @@
                     </div>
                 </div>
 
-                <div class="col-lg-3 col-md-4 col-xs-6 work_container thumb">
-                    <a class="thumbnail" href="http://bexbase.com//test2/">
+                <div class="col-lg-3 col-md-4 col-xs-6 work_container thumb ">
+                    <a class="thumbnail bw tilt " href="http://bexbase.com//test2/">
                         <img class="img-responsive work_image" src="image/websites/TwitterQuery.png" alt="TwitterQuery">
                     </a>
                     <div class="caption"><h3 class="work_text_h3">Twitter Query</h3>
@@ -121,7 +122,7 @@
                 </div>
 
 
-                <div class="col-lg-3 col-md-4 col-xs-6 work_container thumb">
+                <div class="col-lg-3 col-md-4 col-xs-6 work_container thumb bw">
                     <a class="thumbnail" href="http://bexbase.com//test/">
                         <img class="img-responsive work_image" src="image/websites/PopOutImage.png" alt="PopOutImage">
                     </a>
