--- a/work.html
+++ b/work.html
@@ -27,6 +27,7 @@
     <!-- Custom styles for this template -->
     <link href="css/style.css" rel="stylesheet">
     <link href="css/slider.css" rel="stylesheet">
+    <link href="css/effects.css" rel="stylesheet">
     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/animate.min.css" rel="stylesheet">
     <!--<link href="carousel.css" rel="stylesheet">-->
@@ -71,8 +72,7 @@
             Projects</a></li>
         <li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">Commercial
             Products</a></li>
-        <li role="presentation"><a href="#messages" aria-controls="messages" role="tab" data-toggle="tab">Sites I Have
-            Worked On</a></li>
+        <li role="presentation"><a href="#messages" aria-controls="messages" role="tab" data-toggle="tab">Games and Apps</a></li>
     </ul>
 
     <!-- Tab panes -->
@@ -89,8 +89,8 @@
                         <p>I also try and document my work and update research I am performing on my <a href="blog" target="_blank">Blog</a>.</p>
                 </div>
 
-                <div class="col-lg-3 col-md-4 col-xs-6 work_container thumb bw">
-                    <a class="thumbnail" href="http://benoats.co/university/savings/">
+                <div class="col-lg-3 col-md-4 col-xs-6 work_container thumb">
+                    <a class="thumbnail tilt" href="http://benoats.co/university/savings/">
                         <img class="img-responsive work_image" src="image/websites/SavingsSystem.png" alt="PopOutImage">
                     </a>
                     <div class="caption"><h3 class="work_text_h3">Regular Savings Tracker</h3>
@@ -107,7 +107,7 @@
                 </div>
 
                 <div class="col-lg-3 col-md-4 col-xs-6 work_container thumb ">
-                    <a class="thumbnail bw tilt " href="http://bexbase.com//test2/">
+                    <a class="thumbnail tilt  " href="http://bexbase.com//test2/">
                         <img class="img-responsive work_image" src="image/websites/TwitterQuery.png" alt="TwitterQuery">
                     </a>
                     <div class="caption"><h3 class="work_text_h3">Twitter Query</h3>
@@ -121,9 +121,8 @@
                     </div>
                 </div>
 
-
-                <div class="col-lg-3 col-md-4 col-xs-6 work_container thumb bw">
-                    <a class="thumbnail" href="http://bexbase.com//test/">
+                <div class="col-lg-3 col-md-4 col-xs-6 work_container thumb ">
+                    <a class="thumbnail tilt" href="http://bexbase.com//test/">
                         <img class="img-responsive work_image" src="image/websites/PopOutImage.png" alt="PopOutImage">
                     </a>
                     <div class="caption"><h3 class="work_text_h3">Pop Out Image Gallery</h3>
@@ -138,7 +137,7 @@
                 </div>
 
                 <div class="col-lg-3 col-md-4 col-xs-6 work_container thumb">
-                    <a class="thumbnail" href="http://bexbase.com//test/">
+                    <a class="thumbnail tilt" href="http://bexbase.com//test/">
                         <img class="img-responsive work_image" src="image/websites/JesusChristSuperstar.png"
                              alt="JesusChristSuperstar">
                     </a>
@@ -170,7 +169,7 @@
                     </div>
 
                     <div class="col-lg-3 col-md-4 col-xs-6 work_container thumb">
-                        <a class="thumbnail" href="http://bexbase.com/index.php">
+                        <a class="thumbnail tilt" href="http://bexbase.com/index.php">
                             <img class="img-responsive work_image" src="image/websites/BexBase.png" alt="PopOutImage">
                         </a>
                         <div class="caption"><h3 class="work_text_h3">BexBase Development</h3>
@@ -187,7 +186,7 @@
                     </div>
 
                     <div class="col-lg-3 col-md-4 col-xs-6 work_container thumb">
-                        <a class="thumbnail" href="http://www.bmwood.co.uk/">
+                        <a class="thumbnail tilt" href="http://www.bmwood.co.uk/">
                             <img class="img-responsive work_image" src="image/websites/bmWood.png" alt="BmWood">
                         </a>
                         <div class="caption"><h3 class="work_text_h3">BM Wood</h3>
@@ -205,7 +204,7 @@
                     </div>
 
                     <div class="col-lg-3 col-md-4 col-xs-6 work_container thumb">
-                        <a class="thumbnail" href="http://bexbase.com/benswork/">
+                        <a class="thumbnail tilt" href="http://bexbase.com/benswork/">
                             <img class="img-responsive work_image" src="image/websites/LeighGardenCentre.png"
                                  alt="LeighGaredenCentre">
                         </a>
@@ -220,6 +219,17 @@
                                     Website</a>
                                 <!--<a href="https://github.com/TheLaughingGod1986/savings" target="_blank" class="btn btn-success" role="button">View Code</a>-->
                             </p>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+                        <div class="hover ehover1">
+                            <img class="img-responsive" src="image/websites/LeighGardenCentre.png" alt="">
+                            <div class="overlay">
+                                <h2>Hover effect 1</h2>
+                                <button class="info" data-toggle="modal" data-target="#modal1">Show code
+                                </button>
+                            </div>
                         </div>
                     </div>
 
