--- a/work.html
+++ b/work.html
@@ -164,8 +164,8 @@
 
                     <div class="col-lg-12">
                         <h1 class="page-header">Commercial Products</h1>
-                        <p>This is a ......................</p>
-                        <p>all code ...................</p>
+                        <!--<p>This is a ......................</p>-->
+                        <!--<p>all code ...................</p>-->
                     </div>
 
                     <div class="col-lg-3 col-md-4 col-xs-6 work_container thumb">
